[tool.poetry]
name = "sherpa"
version = "0.1.0"
description = "A simple CLI tool for loading GIS files to a PostGIS database."
authors = ["Connor Keogh <contact@kyoh.run>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
sherpa = "sherpa.main:app"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
typer = "^0.12.0"
rich = "^13.7.1"
psycopg2-binary = "^2.9.9"
fiona = "^1.9.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
autoflake = "^2.3.1"
black = "^24.3.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
