[tool.poetry]
name = "sherpa"
version = "0.1.0"
description = "A simple CLI tool for loading GIS files to a PostGIS database."
authors = ["Connor Keogh <contact@kyoh.run>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
sherpa = "sherpa.main:app"

[tool.poetry.dependencies]
python = "^3.11.0"
typer = "^0.12.0"
rich = "^13.7.1"
psycopg2-binary = "^2.9.9"
fiona = "^1.9.6"
tomlkit = "^0.12.4"
shapely = "^2.0.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.5"
pytest = "^8.1.1"

[tool.mypy]
strict = true
install_types = true
non_interactive = true
ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tomlkit"
ignore_errors = true

[tool.ruff]
line-length = 120
target-version = 'py311'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
